--- a/notebooks/final_data_preprocessing_and_training.ipynb
+++ b/notebooks/final_data_preprocessing_and_training.ipynb
@@ -12,24 +12,15 @@
    },
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.utils.multiclass import unique_labels\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.metrics import recall_score, make_scorer, classification_report\n",
+    "from app.functions.process_url import *\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, recall_score\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from xgboost import XGBClassifier\n",
-    "from sklearn.metrics import classification_report, accuracy_score, precision_score, recall_score, f1_score\n",
-    "\n",
-    "from app.functions.process_url import *\n"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from xgboost import XGBClassifier"
    ],
    "outputs": [],
    "execution_count": 9
@@ -37,7 +28,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Dataset loading and creating features",
+   "source": [
+    "# Dataset loading and creating features"
+   ],
    "id": "43b8b7fbc130cec"
   },
   {
@@ -72,7 +65,9 @@
     }
    },
    "cell_type": "code",
-   "source": "print(data.head())",
+   "source": [
+    "print(data.head())"
+   ],
    "id": "74f6941b6383532f",
    "outputs": [
     {
@@ -123,7 +118,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Exploratory data analysis",
+   "source": [
+    "# Exploratory data analysis"
+   ],
    "id": "f4965def91620802"
   },
   {
@@ -184,7 +181,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Training models",
+   "source": [
+    "# Training models"
+   ],
    "id": "20331cbae9d530fe"
   },
   {
@@ -290,6 +289,7 @@
     "    y_pred = model.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test, y_pred)\n",
     "    report = classification_report(y_test, y_pred, output_dict=True)\n",
+    "    print(f\"{model_name} metrics summary:\\n{report}\")\n",
     "    \n",
     "    model_metrics[model_name] = {\n",
     "        'Accuracy': accuracy,\n",
@@ -399,7 +399,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [],
    "id": "a2abf05f750f9e0b"
   }
  ],
